k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laravel-demo
  labels:
    name: laravel-demo
    app: laravel-k8s-showcase
    environment: development
---
